// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`traitalias as abstract 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        TraitUse {
          "adaptations": Array [
            TraitAlias {
              "as": null,
              "kind": "traitalias",
              "method": "sayHello",
              "trait": null,
              "visibility": "",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "HelloWorld",
              "resolution": "uqn",
            },
          ],
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "MyClass1",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`traitalias as final 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        TraitUse {
          "adaptations": Array [
            TraitAlias {
              "as": null,
              "kind": "traitalias",
              "method": "sayHello",
              "trait": null,
              "visibility": "",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "HelloWorld",
              "resolution": "uqn",
            },
          ],
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "MyClass1",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`traitalias as method 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        TraitUse {
          "adaptations": Array [
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "myPrivateHello",
              },
              "kind": "traitalias",
              "method": "sayHello",
              "trait": null,
              "visibility": "",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "HelloWorld",
              "resolution": "uqn",
            },
          ],
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "MyClass2",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`traitalias as private 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        TraitUse {
          "adaptations": Array [
            TraitAlias {
              "as": null,
              "kind": "traitalias",
              "method": "sayHello",
              "trait": null,
              "visibility": "private",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "HelloWorld",
              "resolution": "uqn",
            },
          ],
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "MyClass1",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`traitalias as protected 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        TraitUse {
          "adaptations": Array [
            TraitAlias {
              "as": null,
              "kind": "traitalias",
              "method": "sayHello",
              "trait": null,
              "visibility": "protected",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "HelloWorld",
              "resolution": "uqn",
            },
          ],
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "MyClass1",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`traitalias as protected protected 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        TraitUse {
          "adaptations": Array [
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "protected",
              },
              "kind": "traitalias",
              "method": "sayHello",
              "trait": null,
              "visibility": "protected",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "HelloWorld",
              "resolution": "uqn",
            },
          ],
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "MyClass1",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`traitalias as public 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        TraitUse {
          "adaptations": Array [
            TraitAlias {
              "as": null,
              "kind": "traitalias",
              "method": "sayHello",
              "trait": null,
              "visibility": "public",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "HelloWorld",
              "resolution": "uqn",
            },
          ],
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "MyClass1",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`traitalias as public with method 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        TraitUse {
          "adaptations": Array [
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "myPrivateHello",
              },
              "kind": "traitalias",
              "method": "sayHello",
              "trait": null,
              "visibility": "public",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "HelloWorld",
              "resolution": "uqn",
            },
          ],
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "MyClass2",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`traitalias as static 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        TraitUse {
          "adaptations": Array [
            TraitAlias {
              "as": null,
              "kind": "traitalias",
              "method": "sayHello",
              "trait": null,
              "visibility": "",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "HelloWorld",
              "resolution": "uqn",
            },
          ],
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "MyClass1",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
